# SynxFlow

./: setup.py
docs/source/Tutorials/: debris.ipynb
synxflow/: CMakeLists.txt
synxflow/IO/: Boundary.py  InputModel.py  OutputModel.py  Raster.py  indep_functions.py  spatial_analysis.py
synxflow/apps/cudaDebrisFlowSolverPybind/: CMakeLists.txt
synxflow/apps/cudaFloodSolversPybind/: CMakeLists.txt
synxflow/apps/cudaLandslideSolverPybind/: CMakeLists.txt
synxflow/lib/: CMakeLists.txt
synxflow/lib/include/IO/: cuda_backup_writer.h  field_reader.h
synxflow/lib/src/IO/: cuda_gisascii_writer.cu  field_reader.cc
synxflow/lib/src/operators/: cuda_advection_NSWEs.cu  cuda_friction.cu
